--- a/README.Rmd
+++ b/README.Rmd
@@ -17,8 +17,8 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
-[![R build status](https://github.com/tmelliott/translatr/workflows/R-CMD-check/badge.svg)](https://github.com/tmelliott/translatr/actions)
-[![Codecov test coverage](https://codecov.io/gh/tmelliott/translatr/branch/main/graph/badge.svg)](https://codecov.io/gh/tmelliott/translatr?branch=main)
+[![R-CMD-check](https://github.com/tmelliott/translatr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/tmelliott/translatr/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/tmelliott/translatr/branch/main/graph/badge.svg)](https://codecov.io/gh/tmelliott/translatr?branch=develop)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/translatr)](https://CRAN.R-project.org/package=translatr)
 
