add tests, fix up minor issues

--- a/inst/i18n/en.json
+++ b/inst/i18n/en.json
@@ -1,3 +1,5 @@
 {
-  "hello": "Hello everyone!"
+  "hello": "Hello everyone!",
+  "welcome": "Welcome",
+  "demo_message": "This is a demonstration message!"
 }
