--- a/README.Rmd
+++ b/README.Rmd
@@ -48,7 +48,7 @@ devtools::install_github("tmelliott/translatr")
 
 To get started, you'll need a directory, typically called `i18n`, with your translation files.
 
-```{r create_files}
+```{r load}
 library(translatr)
 
 i18n_dir <- system.file("i18n", package = "translatr")
